--- a/html/git.html
+++ b/html/git.html
@@ -8,10 +8,8 @@
 <body>
 <article id="news-body" itemprop="articleBody">
 
-    <p class="blue" style="color:blue">
-        Перед вами небольшая статья-шпаргалка,&nbsp; которая включает в себя команды удобные, но не всем знакомые
-        команды Git, которые могут стать вашими постоянными спутниками в разработке.
-    </p>
+    <p class="title">Перед вами небольшая статья-шпаргалка, которая включает в себя команды удобные, но не всем знакомые
+        команды Git, которые могут стать вашими постоянными спутниками в разработке.</p>
     <p>
         1. <b class="red" style="color:red">git init</b>
     </p>
