--- a/html/macOS.html
+++ b/html/macOS.html
@@ -15,20 +15,16 @@
 <body>
 <h2>Команды для навигации и базовой работы с файлами</h2>
 <ul>
-    <li><strong>ls</strong> — покажет содержимое директории, в которой вы находитесь. Если после команды ввести адрес
-        конкретной папки, то она покажет то, что хранится в ней. При добавлении аргумента <strong>-R</strong> в выводе
-        команды появятся файлы из поддиректорий.
+    <li><strong>ls</strong> — Показать информацию о папке и файлах about file(s)
     </li>
     <li><strong>cd</strong> — change directory, что в переводе означает «сменить директорию». Из названия понятно, что с
         помощью этой команды можно перемещаться между папками. Вписываем ее, а потом адрес: <strong>cd
             /user/test/dir/111</strong>. Есть сокращенные варианты: <strong>cd-</strong> для перемещения в предыдущую
         директорию или <strong>cd (без аргументов)</strong> для прыжка в домашнюю папку.
     </li>
-    <li><strong>pwds</strong> — укажет полный путь до директории, в которой вы находитесь. Если вы перепрыгнули на
-        рабочий стол с помощью cd, то pwd покажет что-то в духе /home/Polzovatel/Desktop.
+    <li><strong>pwd</strong> — Вывести имя текущей папки
     </li>
-    <li><strong>file</strong> — расскажет, что перед вами изображение, директория или текстовый документ, а также
-        предоставит информацию о них (для изображений, например, это данные EXIF).
+    <li><strong>file</strong> — Определить тип файла
     </li>
     <li><strong>mv</strong> — mv применяется для перемещения файлов из одной папки в другую. Перенесем файл timeweb.txt
         из домашней директории на рабочий стол: <strong>mv timeweb.txt /home/<em>имя учетной
@@ -43,18 +39,11 @@
             стереть с компьютера</em></strong>. Чтобы удалить каталог&nbsp;Timeweb и все его содержимое из домашней
         папки пользователя, введем: <strong>rm ~/Timeweb</strong>.
     </li>
-    <li><strong>rmdir</strong> — создает новую директорию. Допустим, мы хотим создать папку под новый проект на рабочем
-        столе. Для этого введем команду: <strong>mkdir ~/Desktop/Timeweb</strong>. При желании можно разместить новую
-        папку в промежутке между двумя уже существующими. К примеру: <strong>mkdir -p
-            /home/New_Project/Newest_Project</strong> создаст папку New_Project в домашней директории и станет родителям
-        для существующей папки Newest_Project.
+    <li><strong>rmdir</strong> — Удалить папки
     </li>
-    <li><strong>mkdir</strong> — удаляет пустую папку. Акцентируем внимание на слове «пустую». В отличие от rm, rmdir не
-        трогает другие файлы и субдиректории.
+    <li><strong>mkdir</strong> — Создать новую папку
     </li>
-    <li><strong>cat</strong> — показывает содержимое документов. Можно скормить этой утилите любой текстовый файл, и она
-        прямо в терминале отобразит все, что в нем записано. Пишем: <strong>cat <em>путь до файла, содержимое которого
-            надо осмотреть</em></strong>.
+    <li><strong>cat</strong> — Соединить файлы в один и вывести их в стандартный вывод
     </li>
 </ul>
 </body>
