--- a/html/git.html
+++ b/html/git.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Основы Git</title>
-    <link rel="stylesheet" href="git.css">
+    <link rel="stylesheet" href="css/git.css">
 </head>
 <body>
     <p class="main">Перед вами небольшая статья-шпаргалка, которая включает в себя команды удобные, но не всем знакомые
