--- a/html/git.html
+++ b/html/git.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" href="css/git.css">
 </head>
 <body>
+    <a href="index.html" class="mainpage">Обучающий портал компании</a>
+    <br>
     <p class="main">Перед вами небольшая статья-шпаргалка, которая включает в себя команды удобные, но не всем знакомые
         команды Git, которые могут стать вашими постоянными спутниками в разработке</p>
     <p>1. <b class="red">git init</b></p>
-    <p>Эта команда используется для клонирования проекта как репозитория git.</p>
+    <p>Эта команда используется для инициализации проекта как репозитория git.</p>
     <br>
     <p>2. <b class="second">git clone</b></p>
     <p>Эта команда клонирует репозиторий в новую директорию.</p>
@@ -24,7 +26,7 @@
     <p><code>rm -rf !$/.git</code></p>
         <br>
     <p>3. <b class="third">git remote add</b></p>
-    <p>Пример: <code>git remote add origin <ahref="https://github.com/MrKrishnaAgarwal/Git-CheatSheet.git?roistat_visit=2927050">https://github.com/MrKrishnaAgarwal/Git-CheatSheet.git</a></code></p>
+    <p>Пример: <code>git remote add origin <a href="https://github.com/MrKrishnaAgarwal/Git-CheatSheet.git?roistat_visit=2927050">https://github.com/MrKrishnaAgarwal/Git-CheatSheet.git</a></code></p>
     <p>Эта команда используется для добавления или подключения к удаленному репозиторию.</p>
     <br>
     <p>4. <b class="fourth">git remote -v</b></p>
