--- a/html/macOS.html
+++ b/html/macOS.html
@@ -13,6 +13,7 @@
     </style>
 </head>
 <body>
+    <a href="index.html" class="mainpage">Обучающий портал компании</a>
 <h2>Команды для навигации и базовой работы с файлами</h2>
 <ul>
     <li><strong>ls</strong> — Показать информацию о папке и файлах about file(s)
