--- a/html/cmd.html
+++ b/html/cmd.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Командная строка Windows</title>
+    <link rel="stylesheet" href="css/cmd.css">
 </head>
 <body>
+<a href="index.html" class="mainpage">Обучающий портал компании</a>
+<br>
     <h1>Краткий справочник по командам командной оболочки (Cmd.exe)</h1>
     <ul style="text-align: justify;">
-        <li><strong>md (chdir) —</strong> создает подкаталог в текущем или заданном каталоге;</li>
+        <li><strong>md (mkdir) —</strong> создает подкаталог в текущем или заданном каталоге;</li>
         <li><strong>del (erase) </strong> — удаляет заданный файл, группу файлов или каталог;</li>
         <li><strong>time</strong> — показывает или устанавливает системное время;</li>
         <li><strong>copy —</strong> копирует файлы или выполняет конкатенацию файлов;</li>
@@ -17,8 +20,7 @@
         <li><strong>exit</strong> — выход из оболочки командной строки;</li>
         <li><strong>cd (chdir)</strong> — показывает имя текущего каталога или выполняет смену текущего каталога;</li>
         <li><strong>move</strong> — перемещает файл или группу файлов из текущего или заданного исходного каталога в
-            указанный каталог. Также может переименовывать каталог;
-        </li>
+            указанный каталог. Также может переименовывать каталог;</li>
         <li><strong>rd (rmdir)</strong> — удаляет каталог или каталог вместе с его подкаталогами;</li>
         <li><strong>ren (rename)</strong> — Переименовывает файл или группу файлов;</li>
         <li><strong>date</strong> — показывает или устанавливает текущую дату;</li>
