--- a/html/index.html
+++ b/html/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="css/index.css">
     <style>
         .container {
-         width: 1500px;
-         height: 400px;
+         width: 1600px;
+         height: 1100px;
          background-image: linear-gradient(to right, #E2BCBB, #E4514A);
          }
          .col-1-2 {
@@ -16,7 +16,6 @@
     </style>
 </head>
 <body>
-  <div class="container">
     <a href="jpg/logo.jpg" class="logo">Обучающий портал компании</a>
     <nav>
       <ul>
@@ -26,9 +25,9 @@
           <li><a href="git.html">Команды Git</a></li>
       </ul>
     </nav>
-  </div>
 <div class="main">
   <div class="container">
+    <nav>
     <div class="col-1-2">
            <p><a href="index.html"><img src="jpg/logo.jpg" width="100" height="100" border="0"></a></p>
     </div>
@@ -41,6 +40,7 @@
     <div class="col-2-2">
            <p><a href="cmd.html"><img src="jpg/win.jpg" width="100" height="100" border="0"></a></p>
     </div>
+    </nav>
   </div>
 </div>
 <footer>
